# erachnid

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: xib_helpers.cmake
lib/: CMakeLists.txt
src/: CMakeLists.txt  Stuff.xib  chomp.cc  chomp.hh  clap-entry.c  clap-entry.cc  erachnid.c  example.c  example.h  factory.c  reaper.c  reaper.cc
src/chomp/: CMakeLists.txt  audio_ports.cc  bridge.cc  bridge.hh  chomp.cc  chomp_impl.hh  chomp_plugin.cc  chomp_plugin.hh  clap_plugin.cc  clap_plugin.hh  params.cc  params.hh  ports.cc  process.cc
src/chomp/gui/: Stuff.xib  chomp_gui_darwin.h  chomp_gui_darwin.mm  gui.cc  gui.h  gui.hh  gui.mm  gui_darwin.h  gui_darwin.mm
src/chomp/include/: chomp.h  chomp.hh
src/common/: CMakeLists.txt  clap_bridge.cc  clap_gui.hh  clap_param.cc  clap_param.hh  clap_plugin.cc  clap_plugin.hh  params.cc  params.hh  voice_tracking.cc  voice_tracking.hh
src/example/: CMakeLists.txt  example.c
src/example/include/: example.h
src/gui/: CMakeLists.txt
src/scan/: CMakeLists.txt  desc.cc  plugin.cc  plugin.hh  process.cc
src/scan/gui/: gui_darwin.h  gui_darwin.mm  scan.xib
src/scan/include/: scan.hh
src/skeleton/: CMakeLists.txt  desc.cc  plugin.cc  plugin.hh  process.cc
src/skeleton/gui/: gui_darwin.h  gui_darwin.mm  skeleton.xib
src/skeleton/include/: skeleton.hh
src/starry/: CMakeLists.txt  starry.cc  starry_plugin.cc  starry_plugin.hh  starry_voice.cc  starry_voice.hh
src/starry/include/: starry.hh
src/weave/: CMakeLists.txt  weave.cc
src/weave/gui/: weave.xib
